--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </style>
 </head>
 <body>
-  <h1>hamilmoji 👀 🧠 💼</h1>
+  <h1>🇭​🇦​🇲​🇮​🇱​🇲​🇴​🇯​🇮​</h1>
 
-  <p>a hamilton search engine, setup to search with emoji.</p>
+  <p>a hamilton search engine, for song-retrieval through graphical depiction. powered by <a href="https://algolia.com">algolia</a>.</p>
   <p>examples:</p>
   <ul>
     <li>👀 🧠 💼 - lookin' for a mind at work (The Schuyler Sisters)</li>
