adding link to github repo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <h1>🇭​🇦​🇲​🇮​🇱​🇲​🇴​🇯​🇮​</h1>
 
   <p>a hamilton search engine, for song-retrieval through graphical depiction. powered by <a href="https://algolia.com">algolia</a>.</p>
+  <p><a href="https://github.com/jamierumbelow/hamilmoji">source code on github</a></p>
   <p>examples:</p>
   <ul>
     <li>👀 🧠 💼 - lookin' for a mind at work (The Schuyler Sisters)</li>
